--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "sslPort": 44336
     }
   },
-  "profiles": {
+  "Profiless": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
