--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost\\SQLEXPRESS;Database=OPENSPACE;user=sa;password=admin;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "TokenConfigurations":{
+    "Audience":"Audience",
+    "Issuer": "Issuer",
+    "Seconds": 1200,
+    "Key":"mykeyyyyyyyyyyyyyyyy"
   },
   "AllowedHosts": "*"
 }
