created new get and put, new variables

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost\\SQLEXPRESS;Database=OPENSPACE;user=sa;password=admin;Trusted_Connection=True;"
+    "Default": "Server=(LocalDB)\\MSSQLLocalDB;Database=OPENSPACE;Integrated Security=true"
   },
   "Logging": {
     "LogLevel": {
